updated about me photo, fixed contact form so that it is aligned and the name box isn't colored. still need to set the on click for the submit button and also need to fix footer on about me page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -191,15 +191,9 @@ input[type=submit] {
     border: 0 none;
 }
 
-#navbarNav {
-    /* width: 100%;
-    height: 75px;
-    position: relative; */
-}
-
 #name {
-    background-color: #4aaaa5;
-    position:relative; 
+    background-color: #ffffff;
+    /* position:relative;  */
     left: 220px;
 }
 
